--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
             crossorigin="anonymous"
         />
 
-        <title>Sneaker That</title>
+        <title>Buy me a Sneaker</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
